# DirectFB2-lirc

./: AUTHORS  ChangeLog  INSTALL  README  lirc.c  meson.build  meson_options.txt
